making OkHttpClinet work in native-image

--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -15,6 +15,10 @@
   ]
 },
 {
+  "name":"java.lang.Throwable",
+  "methods":[{"name":"addSuppressed","parameterTypes":["java.lang.Throwable"] }]
+},
+{
   "name":"scalan.TypeDescs$FuncElem",
   "allDeclaredConstructors":true
 },
