retrofit calls work in native-image

--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -11,6 +11,10 @@
   "name":"java.util.Optional"
 },
 {
+  "name":"org.ergoplatform.api.client.InfoApi",
+  "methods":[{"name":"getNodeInfo","parameterTypes":[] }]
+},
+{
   "name":"org.ergoplatform.api.client.NodeInfo",
   "allDeclaredFields":true,
   "methods":[{"name":"<init>","parameterTypes":[] }]
