--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -1,5 +1,20 @@
 [
 {
+  "name":"com.google.common.util.concurrent.AbstractFuture",
+  "fields":[
+    {"name":"listeners", "allowUnsafeAccess":true}, 
+    {"name":"value", "allowUnsafeAccess":true}, 
+    {"name":"waiters", "allowUnsafeAccess":true}
+  ]
+},
+{
+  "name":"com.google.common.util.concurrent.AbstractFuture$Waiter",
+  "fields":[
+    {"name":"next", "allowUnsafeAccess":true}, 
+    {"name":"thread", "allowUnsafeAccess":true}
+  ]
+},
+{
   "name":"java.lang.Throwable",
   "methods":[{"name":"addSuppressed","parameterTypes":["java.lang.Throwable"] }]
 },
@@ -27,5 +42,72 @@
   "name":"org.ergoplatform.api.client.Parameters",
   "allDeclaredFields":true,
   "methods":[{"name":"<init>","parameterTypes":[] }]
+},
+{
+  "name":"scalan.TypeDescs$FuncElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"scalan.TypeDescs$PairElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"sigmastate.GT",
+  "allPublicConstructors":true
+},
+{
+  "name":"sigmastate.eval.CostingRules$ContextCoster",
+  "methods":[{"name":"HEIGHT","parameterTypes":[] }]
+},
+{
+  "name":"sigmastate.lang.Terms$Block",
+  "allPublicConstructors":true
+},
+{
+  "name":"special.collection.Costs$Costed",
+  "methods":[
+    {"name":"cost","parameterTypes":[] }, 
+    {"name":"value","parameterTypes":[] }
+  ]
+},
+{
+  "name":"special.collection.impl.CollsDefs$Coll$CollElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.collection.impl.ConcreteCostsDefs$CCostedPrim$CCostedPrimElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.collection.impl.ConcreteSizesDefs$CSizePrim$CSizePrimElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.collection.impl.CostsDefs$Costed$CostedElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.collection.impl.SizesDefs$Size$SizeElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.sigma.SigmaDsl$Context",
+  "methods":[{"name":"HEIGHT","parameterTypes":[] }]
+},
+{
+  "name":"special.sigma.SigmaDsl$CostModel",
+  "methods":[{"name":"SelectField","parameterTypes":[] }]
+},
+{
+  "name":"special.sigma.SigmaDsl$SigmaDslBuilder",
+  "methods":[{"name":"CostModel","parameterTypes":[] }]
+},
+{
+  "name":"sun.misc.Unsafe",
+  "allDeclaredFields":true
+},
+{
+  "name":"wrappers.scalan.impl.WRTypesDefs$WRType$WRTypeElem",
+  "allDeclaredConstructors":true
 }
 ]
