--- a/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/reflect-config.json
@@ -84,26 +84,70 @@
   "allDeclaredConstructors":true
 },
 {
+  "name":"sigmastate.ArithOp",
+  "allPublicConstructors":true
+},
+{
+  "name":"sigmastate.BoolToSigmaProp",
+  "allPublicConstructors":true
+},
+{
+  "name":"sigmastate.GE",
+  "allPublicConstructors":true
+},
+{
   "name":"sigmastate.GT",
   "allPublicConstructors":true
 },
 {
+  "name":"sigmastate.SigmaAnd",
+  "allPublicConstructors":true
+},
+{
+  "name":"sigmastate.eval.CostingRules$BoxCoster",
+  "methods":[{"name":"creationInfo","parameterTypes":[] }]
+},
+{
   "name":"sigmastate.eval.CostingRules$ContextCoster",
-  "methods":[{"name":"HEIGHT","parameterTypes":[] }]
+  "methods":[
+    {"name":"HEIGHT","parameterTypes":[] }, 
+    {"name":"SELF","parameterTypes":[] }
+  ]
 },
 {
   "name":"sigmastate.lang.Terms$Block",
   "allPublicConstructors":true
 },
 {
+  "name":"special.collection.CollBuilder",
+  "allDeclaredMethods":true
+},
+{
+  "name":"special.collection.Colls$CollBuilder",
+  "allDeclaredMethods":true,
+  "methods":[
+    {"name":"fromItems","parameterTypes":["scala.collection.Seq","scalan.TypeDescs$Elem"] }, 
+    {"name":"replicate","parameterTypes":["scalan.Base$Ref","scalan.Base$Ref"] }
+  ]
+},
+{
   "name":"special.collection.Costs$Costed",
   "methods":[
     {"name":"cost","parameterTypes":[] }, 
+    {"name":"size","parameterTypes":[] }, 
     {"name":"value","parameterTypes":[] }
   ]
 },
 {
   "name":"special.collection.impl.CollsDefs$Coll$CollElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.collection.impl.ConcreteCostsDefs$CCostedColl$CCostedCollElem",
+  "allDeclaredConstructors":true
+},
+{
+  "name":"special.collection.impl.ConcreteCostsDefs$CCostedPair$CCostedPairElem",
   "allDeclaredConstructors":true
 },
 {
@@ -119,20 +163,67 @@
   "allDeclaredConstructors":true
 },
 {
+  "name":"special.collection.impl.CostsDefs$CostedPair$CostedPairElem",
+  "allDeclaredConstructors":true
+},
+{
   "name":"special.collection.impl.SizesDefs$Size$SizeElem",
   "allDeclaredConstructors":true
 },
 {
+  "name":"special.sigma.Box",
+  "allDeclaredMethods":true
+},
+{
+  "name":"special.sigma.Context",
+  "allDeclaredMethods":true
+},
+{
+  "name":"special.sigma.CostModel",
+  "allDeclaredMethods":true
+},
+{
+  "name":"special.sigma.CostedObjects$SizeContext",
+  "methods":[{"name":"selfBox","parameterTypes":[] }]
+},
+{
+  "name":"special.sigma.SigmaDsl$Box",
+  "allDeclaredMethods":true,
+  "methods":[{"name":"creationInfo","parameterTypes":[] }]
+},
+{
   "name":"special.sigma.SigmaDsl$Context",
-  "methods":[{"name":"HEIGHT","parameterTypes":[] }]
+  "allDeclaredMethods":true,
+  "methods":[
+    {"name":"HEIGHT","parameterTypes":[] }, 
+    {"name":"SELF","parameterTypes":[] }
+  ]
 },
 {
   "name":"special.sigma.SigmaDsl$CostModel",
-  "methods":[{"name":"SelectField","parameterTypes":[] }]
+  "allDeclaredMethods":true,
+  "methods":[
+    {"name":"AccessBox","parameterTypes":[] }, 
+    {"name":"GetRegister","parameterTypes":[] }, 
+    {"name":"SelectField","parameterTypes":[] }
+  ]
 },
 {
   "name":"special.sigma.SigmaDsl$SigmaDslBuilder",
-  "methods":[{"name":"CostModel","parameterTypes":[] }]
+  "allDeclaredMethods":true,
+  "methods":[
+    {"name":"CostModel","parameterTypes":[] }, 
+    {"name":"allZK","parameterTypes":["scalan.Base$Ref"] }, 
+    {"name":"sigmaProp","parameterTypes":["scalan.Base$Ref"] }
+  ]
+},
+{
+  "name":"special.sigma.SigmaDsl$SigmaProp",
+  "methods":[{"name":"isValid","parameterTypes":[] }]
+},
+{
+  "name":"special.sigma.SigmaDslBuilder",
+  "allDeclaredMethods":true
 },
 {
   "name":"sun.misc.Unsafe",
