added reflect-config.json info for Coll public methods making PrepareBox work

--- a/src/main/resources/META-INF/native-image/sigmastate/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/sigmastate/reflect-config.json
@@ -413,6 +413,10 @@
     "allPublicConstructors":true
   },
   {
+    "name":"special.collection.Coll",
+    "allPublicMethods":true
+  },
+  {
     "name":"special.collection.CollBuilder",
     "allDeclaredMethods":true
   },
