ErgoToolConfig using Pureconfig (doesn't work under native-image)

--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,6 +1,8 @@
 {
   "resources":[
+    {"pattern":"reference.conf"}, 
     {"pattern":"sun/net/idn/uidna.spp"}, 
-    {"pattern":"sun/text/resources/unorm.icu"}
+    {"pattern":"sun/text/resources/unorm.icu"}, 
+    {"pattern":"version.conf"}
   ]
 }
