don't fail CI when coverage upload fails

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v1
         with:
-          fail_ci_if_error: true
+          fail_ci_if_error: false
 
       - name: Publish a snapshot ${{ github.ref }}
         run: sbt ++${{ matrix.scala }} publish
