--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,10 +52,10 @@ jobs:
       #   env:
       #     COVERALLS_REPO_TOKEN: $${{ secrets.COVERALLS_REPO_TOKEN }}
 
-      - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          fail_ci_if_error: false
+#      - name: Upload coverage report to Codecov
+#        uses: codecov/codecov-action@v1
+#        with:
+#          fail_ci_if_error: false
 
       - name: Publish a snapshot ${{ github.ref }}
         run: sbt ++${{ matrix.scala }} publish
