--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
       - name: Runs tests and collect coverage
-        run: sbt -jvm-opts ci/ci.jvmopts ++${{ matrix.scala }} coverage test coverageReport coverageAggregate
+        run: sbt -jvm-opts ci/ci.jvmopts ++${{ matrix.scala }} test
       # - name: Upload coverage report
       #   run: sbt ++${{ matrix.scala }} coverageReport coverageAggregate coveralls
       #   env:
