--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
 #          fail_ci_if_error: false
 
       - name: Publish a snapshot ${{ github.ref }}
+        if: env.HAS_SECRETS == 'true'
         run: sbt ++${{ matrix.scala }} publish
         env:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
