--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,8 +45,9 @@ jobs:
 
       - name: Build fat jar
         run: sbt clean assembly
-      - name: Save fat jar artifact
-        uses: actions/upload-artifact@v3
+      - name: Upload release binaries
+        uses: alexellis/upload-assets@0.2.2
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         with:
-          name: ergo-appkit.jar
-          path: target/**/ergo-appkit-*.jar
+          asset_paths: '["target/**/ergo-appkit-*.jar"]'
