--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
           key: ${{ runner.os }}-sbt-cache-v2-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('project/build.properties') }}
 
       - name: Runs tests and collect coverage
-        run: sbt -jvm-opts ci/ci.jvmopts ++${{ matrix.scala }} test
+        run: sbt -jvm-opts ci/ci.jvmopts ++${{ matrix.scala }} "project appkit" test; sbt -jvm-opts ci/ci.jvmopts ++${{ matrix.scala }} "project common" test; sbt -jvm-opts ci/ci.jvmopts ++${{ matrix.scala }} "project libImpl" test
       # - name: Upload coverage report
       #   run: sbt ++${{ matrix.scala }} coverageReport coverageAggregate coveralls
       #   env:
