--- a/.github/workflows/fatjar.yml
+++ b/.github/workflows/fatjar.yml
@@ -7,7 +7,7 @@ env:
 
 jobs:
   publish_release:
-    name: Publish release
+    name: Build fat jar
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
